Changes for 1.6.0:

- Reduce doxygen warnings

Changes for 1.5.0:

- SW QA: unit now passing Sonar report
- Changed C++ standard to C++17

Changes for 1.4.0:

- Support added for comparison of scalar integral type with different signedness
- Improve code quality

Changes for 1.3.0:

- Bugfix (COA-741): unable to parse structured AnyValue with empty member

Changes for 1.2.0:

- Added binary serialization/parsing without restrictions, as opposed to C-type casting
- Added compact string serialization for use on terminals
- QA: all blocker and critical issues resolved; most major issues resolved.
- API changes:
  - Casting an AnyValue to a C-type is now done through the 'ToCType' member function template, while
    the 'As' member function template is reserved for scalar extraction and copying.

Changes for 1.1.0:

- More relaxed AnyType/AnyValue assignments and modification, while at the same time enforcing
  strict type equality of array elements

Changes for 1.0.0:

- Added AnyType for empty, scalar, structured and array types with value semantics
- Added AnyValue for empty, scalar, structured and array values with value semantics
- Added casting of AnyValue to and from C-types
- Added scalar comparison and increment/decrement functions
- Added JSON serialization and parsing (including usage of an AnyType registry)
- Provided Sphinx documentation